objects/COS_Case_Group__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Case Group must be assigned to a parent account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>COS Case Groups</relationshipLabel>
        <relationshipName>COS_Case_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Emails__c</fullName>
        <label>Case Group External Email Alias</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseGroupNameAccountName__c</fullName>
        <formula>Account__c + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseGroupNameAccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactived_Date__c</fullName>
        <label>Inactivated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <formula>IF(LEFT(OwnerId, 3) == &apos;005&apos;, Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName , Owner:Queue.QueueName)</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>COS Case Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Owner_Full_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COS Case Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>